--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@types/nodemailer": "^7.0.1",
     "better-auth": "^1.3.7",
     "better-sqlite3": "^12.2.0",
+    "chess.js": "^1.4.0",
     "kysely": "^0.28.5",
     "nodemailer": "^7.0.5",
     "react": "^19.1.1",
+    "react-chessboard": "^5.6.0",
     "react-dom": "^19.1.1",
     "valibot": "^1.1.0",
     "vite": "^7.1.3"
