--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^19.1.1",
     "react-chessboard": "^5.6.0",
     "react-dom": "^19.1.1",
+    "stockfish.js": "^10.0.2",
     "valibot": "^1.1.0",
     "vite": "^7.1.3"
   },
