--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
+      "~components/*": ["./src/components/*"],
       "~stzUtils/*": ["./stzUtils/*"],
       "~stzUser/*": ["./stzUser/*"]
     }
