implement call to AI to analyze game positions with mistakes

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ SMTP_REPLY_TO_NAME=Your Name
 COMPANY_NAME=Your Company Name
 APP_NAME=Your App Name
 SUPPORT_EMAIL_ADDRESS=support@example.com
+
+# AI Agent
+GEMINI_API_KEY=AIza...gemini_API_KEY
