--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "playwright": "dotenv -e .env.test -- playwright test --headed --config=stzUser/test/e2e/config/playwright.config.ts"
   },
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --host",
     "build": "vite build && echo '\nTo start the production server, use: pnpm start:prod'",
     "start:prod": "node bootstrap.env.mjs",
     "test": "vitest",
