add architecture dir for planning and notes. delete .trae dir

--- a/.gitignore
+++ b/.gitignore
@@ -62,5 +62,5 @@ count.txt
 ToDo.md
 BuilderSuggestions.md
 
-# Reference directory (contains external git repos)
+# Reference directory (contains external git repos, notes...)
 reference/
