--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Authentication Configuration
-# Generate a secure random string on better-auth.com for production
-BETTER_AUTH_SECRET=your_secure_random_string_here
-BETTER_AUTH_BASE_URL=http://localhost:3000
-# Database Configuration
-# Default: Local SQLite (LibSQL)
-DATABASE_URL=file:sqlite.db
-# Optional: Turso Cloud Auth Token (required for libsql:// URLs)
+# Turso/LibSQL Configuration
+# Use libsql://... for remote or file:sqlite.db for local
+DATABASE_URL=
 TURSO_AUTH_TOKEN=
+
+# Authentication Configuration
+# Generate a secure random string on better-auth.com
+BETTER_AUTH_SECRET=
+BETTER_AUTH_BASE_URL=http://localhost:3000
 
 # GitHub OAuth Configuration
 GITHUB_CLIENT_ID=your_github_client_id
