--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite dev --host",
-    "build": "vite build && echo '\nTo start the production server, use: pnpm start:prod'",
+    "build": "vite build",
     "start:prod": "node bootstrap.env.mjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -39,7 +39,6 @@
     "@tanstack/virtual-file-routes": "^1.131.2",
     "@types/nodemailer": "^7.0.1",
     "better-auth": "^1.3.7",
-    "better-sqlite3": "^12.2.0",
     "chess.js": "^1.4.0",
     "dotenv": "^17.2.1",
     "kysely": "^0.28.5",
