config: remove better-sqlite3 from pnpm built dependencies and configure Netlify functions directory.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
   publish = ".output/public"
 
 [functions]
+  directory = ".netlify/functions-internal"
   node_bundler = "esbuild"
 
 [[redirects]]
