--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
+  "sideEffects": false,
   "type": "module",
   "config": {
     "playwright": "dotenv -e .env.test -- playwright test --headed --config=stzUser/test/e2e/config/playwright.config.ts"
@@ -29,7 +31,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@9.15.5",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@libsql/client": "^0.17.0",
