--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ BETTER_AUTH_BASE_URL=http://localhost:3000
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 
+# Cloudflare Turnstile Configuration
+# Get these from the Cloudflare Dashboard
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
+
 # Compatibility Date - year-month-day
 COMPATIBILITY_DATE=2025-01-07
 
