--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
+    "@vitejs/plugin-basic-ssl": "^2.1.4",
     "@vitejs/plugin-react-swc": "^4.0.1",
     "@vitest/ui": "^3.2.4",
     "dotenv-cli": "^10.0.0",
