Refactor: Reorganize agent project planning files and exclude the agent directory from build and optimization processes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,19 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
-      "~stzUtils/*": ["./stzUtils/*"],
-      "~stzUser/*": ["./stzUser/*"]
+      "~/*": [
+        "./src/*"
+      ],
+      "~stzUtils/*": [
+        "./stzUtils/*"
+      ],
+      "~stzUser/*": [
+        "./stzUser/*"
+      ]
     }
   },
   "exclude": [
-    "reference/**/*"
+    "reference/**/*",
+    "agent/**/*"
   ]
 }
